# own_server

./: .gitignore  CMakeLists.txt  README.md  parser-test.py  tree-sitter-generate-parser.py
frontend/: index.html
src/: connection.cpp  connection.h  main.cpp  request_handler.cpp  request_handler.h  server.cpp  server.h  thread_pool.cpp  thread_pool.h
